Interface is a bit improved

--- a/AFDX_GUI/ui/JmaxDialog.ui
+++ b/AFDX_GUI/ui/JmaxDialog.ui
@@ -47,7 +47,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>Max message jitter:</string>
+       <string>Max message jitter (ms):</string>
       </property>
      </widget>
     </item>
