--- a/AFDX_GUI/ui/LinkDialog.ui
+++ b/AFDX_GUI/ui/LinkDialog.ui
@@ -47,7 +47,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>Capacity:</string>
+       <string>Capacity (bytes/ms):</string>
       </property>
      </widget>
     </item>
