--- a/AFDX_GUI/ui/PeriodDialog.ui
+++ b/AFDX_GUI/ui/PeriodDialog.ui
@@ -47,7 +47,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>Period:</string>
+       <string>Period (ms):</string>
       </property>
      </widget>
     </item>
